Se añade soporte para lazy load tables

--- a/src/partials/templates/list-template.html
+++ b/src/partials/templates/list-template.html
@@ -1,100 +1,114 @@
 <!-- @autor:juan benitez   @mail:juan.benitez@konecta.com.py -->
 <div>
-    <br/>
-    <breadcrumb-directive></breadcrumb-directive>
-    <div class="row">
-        <nav class="col-md-3">
-            <div class="form-wrapper">
-                <div class="top-block">
-                    <h2 class="title-top">Filtros</h2>
-                    <p>Criterios de b&#xFA;squeda.</p>
-                </div>
-                <div class="form">
-                    <div ng-transclude="filtros">Agregar Filtros</div>
-                    <hr>
-                    <div ng-transclude="footerFiltros">
-                        <a class="btn btn-default" ng-click="limpiar()">
-                            <i class="fa fa-ban"></i>&#xA0;Limpiar</a>
-                        &nbsp;
-                        <a class="btn btn-primary" ng-click="buscar()">
-                            <i class="fa fa-search"></i>&#xA0;Buscar</a>
+  <br />
+  <breadcrumb-directive></breadcrumb-directive>
+  <div class="row">
+    <nav class="col-md-3">
+      <div class="form-wrapper">
+        <div class="top-block">
+          <h2 class="title-top">Filtros</h2>
+          <p>Criterios de b&#xFA;squeda.</p>
+        </div>
+        <div class="form">
+          <div ng-transclude="filtros">Agregar Filtros</div>
+          <hr />
+          <div ng-transclude="footerFiltros">
+            <a class="btn btn-default" ng-click="limpiar()"> <i class="fa fa-ban"></i>&#xA0;Limpiar</a>
+            &nbsp;
+            <a class="btn btn-primary" ng-click="buscar()"> <i class="fa fa-search"></i>&#xA0;Buscar</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <section class="col-md-9">
+      <section class="form-wrapper">
+        <div class="top-block">
+          <h2 class="title-top" ng-transclude="titulo">Cambiar Titulo</h2>
+          <p ng-transclude="descripcion">Cambiar descripcion</p>
+          <section ng-transclude="configuracionClumnas">
+            <a
+              class="btn btn-defult"
+              ng-init="config.verColumnas=false"
+              ng-if="!config.verColumnas"
+              ng-click="config.verColumnas=true"
+            >
+              <i class="fa fa-list"></i>&nbsp;Configurar Columnas
+            </a>
+            <br />
+
+            <section class="col-md-12" ng-if="config.verColumnas">
+              <div class="panel panel-default row">
+                <div class="panel-body">
+                  <p>
+                    <i class="fa fa-info-circle"></i>&nbsp;Seleccione las columnas que desea visualizar en la lista.
+                  </p>
+                  <hr />
+                  <div class="row">
+                    <div ng-repeat="item in config.header">
+                      <div class="form-group col-md-4 tasty-col-filter" ng-if="item.key.length > 0">
+                        <label class="col-sm-6 control-label"> {{item.name}} </label>
+                        <div class="col-md-6">
+                          <label class="switch">
+                            <input
+                              type="checkbox"
+                              ng-model="item.visible"
+                              ng-change="setVisible(item.key, item.visible)"
+                            />
+                            <div class="slider round"></div>
+                          </label>
+                        </div>
+                      </div>
                     </div>
-
+                  </div>
                 </div>
-            </div>
-        </nav>
-
-        <section class="col-md-9">
-            <section class="form-wrapper">
-                <div class="top-block">
-                    <h2 class="title-top" ng-transclude="titulo">Cambiar Titulo</h2>
-                    <p ng-transclude="descripcion">Cambiar descripcion</p>
-                    <section ng-transclude="configuracionClumnas">
-                        <a class="btn btn-defult" ng-init="config.verColumnas=false" ng-if="!config.verColumnas" ng-click="config.verColumnas=true">
-                            <i class="fa fa-list"></i>&nbsp;Configurar Columnas
-                        </a>
-                        <br/>
-
-                        <section class="col-md-12" ng-if="config.verColumnas">
-                            <div class="panel panel-default row">
-                                <div class="panel-body">
-                                    <p>
-                                        <i class="fa fa-info-circle"></i>&nbsp;Seleccione las columnas que desea visualizar en la lista.
-                                    </p>
-                                    <hr/>
-                                    <div class="row">
-                                        <div ng-repeat="item in config.header">
-                                            <div class="form-group col-md-4 tasty-col-filter" ng-if="item.key.length > 0">
-
-                                                <label class="col-sm-6 control-label">
-                                                    {{item.name}}
-                                                </label>
-                                                <div class="col-md-6">
-                                                    <label class="switch">
-                                                        <input type="checkbox" ng-model="item.visible" ng-change="setVisible(item.key, item.visible)">
-                                                        <div class="slider round"></div>
-                                                    </label>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="panel-footer">
-                                    <a class="btn btn-defult" ng-if="config.verColumnas" ng-click="config.verColumnas=false">
-                                        <i class="fa fa-eject"></i>&nbsp;Ocultar</a>
-                                </div>
-                            </div>
-                        </section>
-                        <br/>
-                    </section>
+                <div class="panel-footer">
+                  <a class="btn btn-defult" ng-if="config.verColumnas" ng-click="config.verColumnas=false">
+                    <i class="fa fa-eject"></i>&nbsp;Ocultar</a
+                  >
                 </div>
-                <div class="wrapper table-responsive" tasty-table="" bind-resource-callback="getResource " bind-init="init " bind-filters="filterByModel">
-                    <table class="table table-striped">
-                        <div ng-transclude="tabla">Agregar Tabla</div>
-                        <tfoot>
-                            <tr ng-if="loading == true">
-                                <td colspan="{{config.header.length}}">
-                                    <loading></loading>
-                                </td>
-                            </tr>
-                            <tr ng-if="loading == null">
-                                <td colspan="{{config.header.length}}">
-                                    <no-data></no-data>
-                                </td>
-                            </tr>
-                        </tfoot>
-                    </table>
-                    <div class="tasty-pagination-responsive" tasty-pagination=""></div>
-                </div>
-                <!--footer-->
-                <div ng-if="footer">
-                    <div ng-transclude="footerTabla">
-                        <hr/>
-                        <a class="btn btn-default" href="#!{{path}}/crear">
-                            <i class="fa fa-plus"></i> Agregar</a>
-                    </div>
-                </div>
+              </div>
             </section>
-        </section>
-    </div>
+            <br />
+          </section>
+        </div>
+        <div
+          class="wrapper table-responsive"
+          tasty-table=""
+          bind-resource-callback="getResource "
+          bind-init="init "
+          bind-filters="filterByModel"
+        >
+          <table class="table table-striped">
+            <div ng-transclude="tabla">Agregar Tabla</div>
+            <tfoot>
+              <tr ng-if="lazy == true">
+                <td colspan="{{config.header.length}}">
+                    <force-search></force-search>
+                </td>
+              </tr>
+              <tr ng-if="lazy == false && loading == true">
+                <td colspan="{{config.header.length}}">
+                  <loading></loading>
+                </td>
+              </tr>
+              <tr ng-if="lazy == false && loading == null">
+                <td colspan="{{config.header.length}}">
+                  <no-data></no-data>
+                </td>
+              </tr>
+            </tfoot>
+          </table>
+          <div class="tasty-pagination-responsive" tasty-pagination=""></div>
+        </div>
+        <!--footer-->
+        <div ng-if="footer">
+          <div ng-transclude="footerTabla">
+            <hr />
+            <a class="btn btn-default" href="#!{{path}}/crear"> <i class="fa fa-plus"></i> Agregar</a>
+          </div>
+        </div>
+      </section>
+    </section>
+  </div>
 </div>
