--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,4 @@
 @import "variables";
-@import "../vendors/bootstrap-sass/assets/stylesheets/bootstrap";
-@import "../vendors/fontawesome/scss/font-awesome";
+@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "node_modules/@fortawesome/fontawesome-free/scss/fontawesome";
 @import "ksass"
